adding in martial arts step
